2009-07-31  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Dom.Serialization/ProjectCodeCompletionDatabase.cs:
	  Resolve corlib name for the current runtime version. Fixes
	  errors with Moonlight and iPhone addins.

2009-07-31  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/ProjectReference.cs: Don't try to
	  resolve assemblies before project (and hence target
	  framework) is set.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/SolutionFolder.cs: When reloading an
	  item, make sure parent add/remove events are sent tot he
	  parent solution.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProject.cs:
	  Preserve empty lines at the end of the file.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Projects.csproj:
	* MonoDevelop.Projects.Formats.MSBuild/RemoteProjectBuilder.cs:
	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs:
	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectService.cs:
	  When trying to build a project using msbuild and the target
	  runtime is not the running runtime, load the msbuild project
	  in a separate process.

2009-07-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Output/AmbienceService.cs: Worked
	  on formatting xml documentation.

2009-07-30  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Projects.csproj:
	* MonoDevelop.Projects.Formats.MSBuild/RemoteLogger.cs:
	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs:
	* MonoDevelop.Projects.Formats.MSBuild/RemoteLoggerController.cs:
	  Add support for building with xbuild.

	* MonoDevelop.Projects.Extensions/IFileFormat.cs: Add some
	  documentation.

2009-07-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.CodeGeneration/IRefactorer.cs:
	* MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs: