@@ -1,3 +1,12 @@
+2009-08-01  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.Projects.Dom/DomType.cs:
+	* MonoDevelop.Projects.Dom/IReturnType.cs:
+	* MonoDevelop.Projects.Dom/CopyDomVisitor.cs:
+	* MonoDevelop.Projects.Dom/DomCecilCompilationUnit.cs: Fixed
+	  "Bug 527337 - Wrong return type in code competion (should be
+	  array of string instead of string)".
+
 2009-07-31  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.Projects.Dom.Serialization/ProjectCodeCompletionDatabase.cs:
